--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@sharedComponents": ["app/components"]
+    },
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
